layout tweaks, removing the Hey in account, alignment of pager, fixed name for View website iso View [site title] for fixed button width

--- a/assets/scss/modules/admin/_toolbar.scss
+++ b/assets/scss/modules/admin/_toolbar.scss
@@ -163,7 +163,7 @@
         font-size: 0.875rem;
         white-space: nowrap;
         @include media-breakpoint-up(sm) {
-          padding: 0.825rem 1rem;
+          padding: 0.85rem 1rem;
         }
         @include media-breakpoint-up(md) {
           font-size: 0.9375rem;
