--- a/assets/scss/modules/listing/row/_container.scss
+++ b/assets/scss/modules/listing/row/_container.scss
@@ -24,9 +24,4 @@
     width: calc(100% - #{$checkbox-row-width});
   }
 
-  &:last-child {
-    .listing__row, .listing--checkbox {
-      margin-bottom: 0.25rem;
-    }
-  }
 }
